--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@walletconnect/client": "^1.7.8",
     "@walletconnect/utils": "^1.7.8",
+    "antd": "^4.23.4",
     "axios": "^0.21.1",
     "bignumber.js": "^9.0.1",
     "blockies-ts": "^1.0.0",
