--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bignumber.js": "^9.0.1",
     "blockies-ts": "^1.0.0",
     "bn.js": "^5.1.3",
+    "crypto-ts": "^1.0.2",
     "eth-sig-util": "^2.5.3",
     "ethers": "^5.0.17",
     "prop-types": "^15.7.2",
